RESOLVED FIXED236369
[WebAuthn] Modify _WKWebAuthenticationAssertionResponse according to internal needs
https://bugs.webkit.org/show_bug.cgi?id=236369
Summary [WebAuthn] Modify _WKWebAuthenticationAssertionResponse according to internal...
pascoe@apple.com
Reported 2022-02-09 08:34:31 PST
^
Attachments
Patch (8.24 KB, patch)
2022-02-09 08:45 PST, pascoe@apple.com
no flags
pascoe@apple.com
Comment 1 2022-02-09 08:34:40 PST
pascoe@apple.com
Comment 2 2022-02-09 08:45:03 PST
Brent Fulgham
Comment 3 2022-02-11 10:51:31 PST
Comment on attachment 451386 [details] Patch r=me
EWS
Comment 4 2022-02-14 09:59:35 PST
Committed r289739 (247224@main): <https://commits.webkit.org/247224@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 451386 [details].
Note You need to log in before you can comment on or make changes to this bug.