[WebAuthn] Modify _WKWebAuthenticationAssertionResponse according to internal needs https://bugs.webkit.org/show_bug.cgi?id=236369 rdar://88585811

Reviewed by Brent Fulgham.

Source/WebCore:

This patch modifies AuthenticatorAssertionResponse with additional
fields and populates them according to internal needs.

* Modules/webauthn/AuthenticatorAssertionResponse.h:
(WebCore::AuthenticatorAssertionResponse::group const):
(WebCore::AuthenticatorAssertionResponse::synchronizable const):
(WebCore::AuthenticatorAssertionResponse::setGroup):
(WebCore::AuthenticatorAssertionResponse::setSynchronizable):

Source/WebKit:

This patch modifies the _WKWebAuthenticationAssertionResponse API object with additional
fields and populates them according to internal needs.

* UIProcess/API/APIWebAuthenticationAssertionResponse.h:
* UIProcess/API/Cocoa/_WKWebAuthenticationAssertionResponse.h:
* UIProcess/API/Cocoa/_WKWebAuthenticationAssertionResponse.mm:
(-[_WKWebAuthenticationAssertionResponse synchronizable]):
(-[_WKWebAuthenticationAssertionResponse group]):
* UIProcess/WebAuthentication/Cocoa/LocalAuthenticator.mm:
(groupForAttributes):
(WebKit::LocalAuthenticatorInternal::getExistingCredentials):



Canonical link: https://commits.webkit.org/247224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289739 268f45cc-cd09-0410-ab3c-d52691b4dbfc